--- a/src/iTechArt/iTechArt.csproj
+++ b/src/iTechArt/iTechArt.csproj
@@ -1,23 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Models\**" />
-    <Content Remove="Models\**" />
-    <EmbeddedResource Remove="Models\**" />
-    <None Remove="Models\**" />
+    <Folder Include="Common\logs\" />
+    <Folder Include="SurveysSite\DomainModel\" />
+    <Folder Include="SurveysSite\Foundation\" />
+    <Folder Include="SurveysSite\Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\iTechArt\iTechArt.csproj" />
   </ItemGroup>
 
 </Project>
