--- a/src/iTechArt/iTechArt.csproj
+++ b/src/iTechArt/iTechArt.csproj
@@ -6,13 +6,16 @@
 
   <ItemGroup>
     <Folder Include="Common\logs\" />
-    <Folder Include="SurveysSite\DomainModel\" />
     <Folder Include="SurveysSite\Foundation\" />
-    <Folder Include="SurveysSite\Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
   </ItemGroup>
 
