--- a/src/iTechArt/iTechArt.Common.csproj
+++ b/src/iTechArt/iTechArt.Common.csproj
@@ -1,14 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Models\**" />
-    <Content Remove="Models\**" />
-    <EmbeddedResource Remove="Models\**" />
-    <None Remove="Models\**" />
+    <Folder Include="logs\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iTechArt\iTechArt.Common.csproj" />
+    <ProjectReference Include="..\iTechArt.SurveysSite.Repositories\iTechArt.SurveysSite.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
