Tried to modify logger and unit of work

--- a/src/iTechArt.SurveysSite.Repositories/iTechArt.SurveysSite.Repositories.csproj
+++ b/src/iTechArt.SurveysSite.Repositories/iTechArt.SurveysSite.Repositories.csproj
@@ -14,4 +14,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DomainModel\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
