Fixes on logger, unit of work and repositories done

--- a/src/iTechArt.SurveysSite.Repositories/iTechArt.SurveysSite.Repositories.csproj
+++ b/src/iTechArt.SurveysSite.Repositories/iTechArt.SurveysSite.Repositories.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\iTechArt.SurveysSite.DomainModel\iTechArt.SurveysSite.DomainModel.csproj" />
+    <ProjectReference Include="..\iTechArt\iTechArt.Common.csproj" />
   </ItemGroup>
 
 </Project>
