--- a/src/iTechArt/iTechArt.Common.csproj
+++ b/src/iTechArt/iTechArt.Common.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\iTechArt.SurveysSite.DomainModel\iTechArt.SurveysSite.DomainModel.csproj" />
+  </ItemGroup>
+
 </Project>
