--- a/src/iTechArt.SurveysSite.WebApp/appsettings.json
+++ b/src/iTechArt.SurveysSite.WebApp/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Trace",
-      "Microsoft.Hosting.Lifetime": "Trace"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=UserDatabase;Trusted_Connection=True;"
   }
 }
