--- a/src/iTechArt.SurveysSite.DomainModel/iTechArt.SurveysSite.DomainModel.csproj
+++ b/src/iTechArt.SurveysSite.DomainModel/iTechArt.SurveysSite.DomainModel.csproj
@@ -1,13 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
-  </ItemGroup>
 
 </Project>
