--- a/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
+++ b/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\iTechArt\iTechArt.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
