Moved migrate to program.cs and created view models for users

--- a/src/iTechArt.SurveysSite.WebApp/appsettings.json
+++ b/src/iTechArt.SurveysSite.WebApp/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=UserDatabase;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SurveysSite;Trusted_Connection=True;"
   }
 }
