--- a/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
+++ b/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
