--- a/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
+++ b/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
@@ -11,4 +11,19 @@
     <None Remove="Models\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\iTechArt.SurveysSite.Foundation\iTechArt.SurveysSite.Foundation.csproj" />
+    <ProjectReference Include="..\iTechArt\iTechArt.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
