--- a/src/iTechArt.SurveysSite.DomainModel/iTechArt.SurveysSite.DomainModel.csproj
+++ b/src/iTechArt.SurveysSite.DomainModel/iTechArt.SurveysSite.DomainModel.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.8" />
   </ItemGroup>
 
 </Project>
