Log settings with appsetting file

--- a/src/iTechArt.SurveysSite.WebApp/appsettings.json
+++ b/src/iTechArt.SurveysSite.WebApp/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": { "path": "../iTechArt/logs/logs.txt" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SurveysSite;Trusted_Connection=True;"
   }
