--- a/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
+++ b/src/iTechArt.SurveysSite.WebApp/iTechArt.SurveysSite.WebApp.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
